--- a/BeekeepingWpfClient/View/ProductWindow.xaml
+++ b/BeekeepingWpfClient/View/ProductWindow.xaml
@@ -4,9 +4,121 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BeekeepingWpfClient.View"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:viewModel="clr-namespace:BeekeepingWpfClient.ViewModel"
+    xmlns:converter="clr-namespace:BeekeepingWpfClient.Core.Converter"
     mc:Ignorable="d"
-    Height="450" Width="800">
-    <Grid>
+    Height="650" Width="800">
 
+    <Window.DataContext>
+        <viewModel:ProductViewModel />
+    </Window.DataContext>
+
+    <Window.Resources>
+        <converter:ByteArrayToBitmapImageConverter x:Key="ByteToImageConverter" />
+    </Window.Resources>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="250" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" Margin="25,0, 0,0">
+            <TextBlock Text="Товары" FontSize="20" VerticalAlignment="Center" Margin="0,0,25,0" />
+
+            <Button
+                Style="{StaticResource MaterialDesignFlatLightBgButton}"
+                Content="Назад"
+                Command="{Binding BackCommand}" />
+        </StackPanel>
+
+        <ListView Grid.Row="1" x:Name="ProductsListView" ItemsSource="{Binding Products}" Margin="10,0,10,0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="120" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Image Source="{Binding Image, Converter={StaticResource ByteToImageConverter}}"
+                            Stretch="Fill"
+                            Margin="10, 0, 10, 0" />
+
+                        <StackPanel Grid.Column="1">
+                            <TextBlock Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                                Text="{Binding Name}" />
+
+                            <TextBlock Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                                Text="{Binding Price}" />
+
+                            <Button
+                                Margin="0,10,0,0"
+                                Content="Удалить"
+                                Style="{StaticResource MaterialDesignFlatLightBgButton}"
+                                Width="180"
+                                Command="{Binding Source={x:Reference ProductsListView},
+                                    Path=DataContext.DeleteProductCommand}"
+                                CommandParameter="{Binding Id}"
+                                HorizontalAlignment="Left" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,10,0" VerticalAlignment="Center">
+            <TextBox
+                FontSize="18"
+                materialDesign:HintAssist.Hint="Название"
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                Text="{Binding Name}"
+                VerticalAlignment="Center" />
+
+            <TextBox
+                FontSize="18"
+                materialDesign:HintAssist.Hint="Стоимость"
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                Margin="0,10,0,0"
+                Text="{Binding Price}"
+                VerticalAlignment="Center" />
+
+            <ComboBox
+                FontSize="18"
+                SelectedItem="{Binding SelectedGetAllProductType}"
+                ItemsSource="{Binding ProductTypes}"
+                DisplayMemberPath="Name"
+                Style="{StaticResource MaterialDesignFilledComboBox}"
+                Margin="0,20,0,0"
+                materialDesign:HintAssist.Hint="Тип товара" />
+
+            <StackPanel Orientation="Horizontal" Margin="1,20,1,0">
+                <Button
+                    VerticalAlignment="Center"
+                    ToolTip="MaterialDesignFloatingActionMiniDarkButton"
+                    Command="{Binding ChooseImageCommand}">
+                    <materialDesign:PackIcon Kind="File" />
+                </Button>
+
+                <TextBlock
+                    Style="{StaticResource MaterialDesignBody1TextBlock}"
+                    Margin="20,0,0,0"
+                    Text="{Binding FilePath}" />
+            </StackPanel>
+
+            <Button
+                Style="{StaticResource MaterialDesignFlatLightBgButton}"
+                Margin="0,10,0,0"
+                Command="{Binding AddProductCommand}"
+                Content="Добавить"
+                Width="180"
+                IsDefault="True" />
+        </StackPanel>
     </Grid>
+
 </local:BaseWindow>
